first dirty solution (every instance Survived = 0)

--- a/.gitignore
+++ b/.gitignore
@@ -36,4 +36,8 @@ vignettes/*.pdf
 *.utf8.md
 *.knit.md
 
-# End of https://www.gitignore.io/api/r
+# data
+produced_data/
+raw_data/
+Data/
+kaggle-titanic-master/
